now plots to the time and display the time on screen

--- a/index.html
+++ b/index.html
@@ -7,10 +7,25 @@
         padding: 0 0 0 0;
         margin: 0 0 0 0;
       }
+
+      #time {
+        position:absolute;
+        top: 70%;
+        left:50%;
+        margin-left: -100px;
+        font-family: "Helvetica", sans-serif;
+        text-transform: uppercase;
+        font-weight: 400;
+        font-size: 54px;
+        color:#666;
+        width: 200px;
+        text-align:center;
+      }
     </style>
   </head>
   <body>
     <canvas id="main"></canvas>
+    <h1 id="time">17:32:05</h1>
     <footer>
     </footer>
     <script src="js/index.js"></script>
